# PresLib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Sandbox.make  TEST.lua  compile.sh  lib.make  premake5.lua  test.lua
lib/: CMakeLists.txt
lib/include/pl/: animation.hpp  animationManager.hpp  assertation.hpp  block.hpp  block.inl  blockFactory.hpp  blockFactory.inl  camera.hpp  colorManager.hpp  component.hpp  componentFactory.hpp  concepts.hpp  config.hpp  core.hpp  defines.hpp  defines.inl  entity.hpp  entity.inl  eventManager.hpp  flow.hpp  font.hpp  fontManager.hpp  graphicsApi.inl  image.hpp  inputManager.hpp  instance.hpp  instance.inl  internalApi.inl  macros.inl  manager.hpp  manager.inl  object.hpp  preslib.hpp  reference.hpp  renderMethod.hpp  renderer.hpp  resourceManager.hpp  resourceManager.inl  result.hpp  shader.hpp  (+13 more)
lib/include/pl/animations/: distortion.hpp  motion.hpp  rotation.hpp  scaling.hpp
lib/include/pl/args/: args.hpp
lib/include/pl/block/: ellipse.hpp  group.hpp  image.hpp  line.hpp  math.hpp  rectangle.hpp  text.hpp  triangle.hpp
lib/include/pl/blocks/: ellipse.hpp  group.hpp  image.hpp  line.hpp  math.hpp  rectangle.hpp  text.hpp  title.hpp  triangle.hpp
lib/include/pl/components/: transform.hpp
lib/include/pl/graphics/: api.inl  efficiency.hpp  framebuffer.hpp  pipeline.hpp  projection.hpp  renderMode.hpp  shader.hpp  text.hpp  texture.hpp  uniform.hpp  vertices.hpp
lib/include/pl/impl/: block.hpp  block.inl  group.hpp  instance.hpp  instance.inl  manager.hpp  manager.inl  slide.hpp  slide.inl
lib/include/pl/impl/SDL2/software/: instance.hpp
lib/include/pl/impl/SDL2_gpu/: instance.hpp  instance.inl
lib/include/pl/impl/SDL2_gpu/blocks/: line.hpp  rectangle.hpp  triangle.hpp
lib/include/pl/impl/SDL2_renderer/: instance.hpp  instance.inl
lib/include/pl/impl/SDL2_renderer/blocks/: ellipse.hpp  ellipse.inl  image.hpp  image.inl  line.hpp  line.inl  math.hpp  math.inl  rectangle.hpp  rectangle.inl  text.hpp  text.inl  title.hpp  title.inl  triangle.hpp  triangle.inl
lib/include/pl/impl/SDL2_renderer/manager/: event.hpp
lib/include/pl/impl/manager/: event.hpp  event.inl  slide.hpp
lib/include/pl/impl/opengl/: instance.hpp  renderer.hpp
lib/include/pl/impl/vulkan/: device.hpp  instance.hpp  pipeline.hpp  renderer.hpp  shader.hpp  surface.hpp  swapChain.hpp
lib/include/pl/manager/: event.hpp  event.inl  slide.hpp  slide.inl
lib/include/pl/math/: angle.hpp  mat2.hpp  mat3.hpp  matn.hpp  matn.inl  matrix.hpp  matrix.inl  rect.hpp  transform.hpp  vec2.hpp  vec3.hpp  vector.hpp  vector.inl
lib/include/pl/memory/: allocator.hpp  heapAllocator.hpp  manager.hpp  manager.inl
lib/include/pl/opengl/: shader.hpp  vertex.hpp
lib/include/pl/render/: buffer.hpp  descriptor.hpp  framebuffer.hpp  pipeline.hpp  renderer.hpp  shader.hpp  texture.hpp  uniform.hpp  vertexLayout.hpp
lib/include/pl/states/: ellipse.hpp  image.hpp  line.hpp  math.hpp  rectangle.hpp  text.hpp  title.hpp  triangle.hpp
lib/include/pl/themes/: modern.hpp  modern.inl
lib/include/pl/transitions/: fading.hpp  motion.hpp
lib/include/pl/utils/: color.hpp  file.hpp  files.hpp  framerate.hpp  function.hpp  function.inl  hash.hpp  id.hpp  keys.hpp  loadImage.hpp  objectType.hpp  output.hpp  path.hpp  transformation.hpp  transformation.inl  types.hpp  vertices.hpp  windowInfos.hpp
lib/src/: animation.cpp  animationManager.cpp  block.cpp  blockFactory.cpp  camera.cpp  colorManager.cpp  config.cpp  eventManager.cpp  flow.cpp  font.cpp  fontManager.cpp  image.cpp  inputManager.cpp  instance.cpp  line.cpp  renderer.cpp  resourceManager.cpp  shader.cpp  shaderManager.cpp  slide.cpp  theme.cpp  transition.cpp  transitionManager.cpp  vertexManager.cpp  window.cpp
lib/src/animations/: distortion.cpp  motion.cpp  rotation.cpp  scaling.cpp
lib/src/block/: ellipse.cpp  group.cpp  image.cpp  line.cpp  math.cpp  rectangle.cpp  text.cpp  triangle.cpp
lib/src/blocks/: ellipse.cpp  group.cpp  image.cpp  line.cpp  math.cpp  rectangle.cpp  text.cpp  triangle.cpp
lib/src/graphics/: text.cpp
lib/src/impl/: instance.cpp  slide.cpp
lib/src/impl/SDL2/software/: instance.cpp
lib/src/impl/SDL2_gpu/: instance.cpp
lib/src/impl/SDL2_gpu/blocks/: line.cpp  rectangle.cpp  triangle.cpp
lib/src/impl/SDL2_renderer/: instance.cpp
lib/src/impl/SDL2_renderer/blocks/: ellipse.cpp  image.cpp  line.cpp  math.cpp  rectangle.cpp  text.cpp  title.cpp  triangle.cpp
lib/src/impl/SDL2_renderer/manager/: event.cpp
lib/src/impl/manager/: event.cpp  slide.cpp
lib/src/impl/opengl/: instance.cpp  renderer.cpp
lib/src/impl/vulkan/: device.cpp  instance.cpp  pipeline.cpp  renderer.cpp  shader.cpp  surface.cpp  swapChain.cpp
lib/src/math/: mat2.cpp  transform.cpp
lib/src/memory/: heapAllocator.cpp  manager.cpp
lib/src/opengl/: shader.cpp  vertex.cpp
lib/src/render/: buffer.cpp  descriptor.cpp  framebuffer.cpp  pipeline.cpp  renderer.cpp  shader.cpp  texture.cpp  uniform.cpp  vertexLayout.cpp
lib/src/themes/: modern.cpp
lib/src/transitions/: fading.cpp  motion.cpp
lib/src/utils/: file.cpp  files.cpp  framerate.cpp  hash.cpp  id.cpp  keys.cpp  loadImage.cpp  output.cpp  path.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
shaders/: CMakeLists.txt  circle.frag  circle.vert  ellipse.frag  ellipse.frag.spv  ellipse.vert  ellipse.vert.spv  framebuffer.frag  framebuffer.frag.spv  framebuffer.vert  framebuffer.vert.spv  framebufferMSAA.frag  framebufferMSAA.frag.spv  line.frag  line.vert  test.frag  test.frag.spv  test.vert  test.vert.spv  text.frag  text.frag.spv  text.vert  text.vert.spv  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  vertices.frag  vertices.frag.spv  vertices.vert  vertices.vert.spv
test/: test.cpp
